# whisp

./: .gitignore  CMakeLists.txt  config.json.sample  test.sh
.claude/: settings.local.json
deploy/: whisp.service
docs/plans/: 2026-03-01-whisp-design.md  2026-03-01-whisp-implementation.md
src/: main.cpp
